--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <a href="./assets/操作系统.html">操作系统</a>
     <a href="./assets/操作系统-简答题.html">操作系统-简答题</a>
+    <a href="./assets/操作系统-计算题.html">操作系统-计算题</a>
 </body>
 
 </html>
