--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <a href="./assets/软件测试.html">软件测试</a>
+    <a href="./assets/软件体系结构设计-题目.html">软件体系结构设计-题目</a>
+    <!-- <a href="./assets/软件测试.html">软件测试</a> -->
     <!-- <a href="./assets/操作系统-简答题.html">操作系统-简答题</a>
     <a href="./assets/操作系统-计算题.html">操作系统-计算题</a> -->
 </body>
