--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <a href="./assets/软件体系结构设计-题目.html">软件体系结构设计-题目</a>
+    <a href="./assets/软件体系结构设计.html">软件体系结构设计</a>
     <!-- <a href="./assets/软件测试.html">软件测试</a> -->
     <!-- <a href="./assets/操作系统-简答题.html">操作系统-简答题</a>
     <a href="./assets/操作系统-计算题.html">操作系统-计算题</a> -->
